Fix Android Scroll Crash

--- a/Sample/Sample.csproj
+++ b/Sample/Sample.csproj
@@ -5,6 +5,7 @@
 		<OutputType>Exe</OutputType>
 		<RootNamespace>Sample</RootNamespace>
 		<UseMaui>true</UseMaui>
+		<MauiVersion>8.0.7</MauiVersion>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 
@@ -78,8 +79,8 @@
 	<ItemGroup>
 	  <PackageReference Include="Prism.DryIoc.Maui" Version="9.0.271-pre" />
 	  <PackageReference Include="ReactiveProperty" Version="9.3.4" />
-	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.6" />
-	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.6" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Views\" />
