--- a/SettingsView/SettingsView.csproj
+++ b/SettingsView/SettingsView.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>net9.0;net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
 		<UseMaui>true</UseMaui>
-		<MauiVersion>8.0.7</MauiVersion>
+		<MauiVersion>9.0.40</MauiVersion>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
@@ -21,12 +21,12 @@
 		<Description>This is a flexible TableView specialized in settings for Android / iOS. 
 There are various cells such as (LabelCell,ButtonCell,CommandCell,SwitchCell,CheckboxCell,RadioCell,PickerCell,EntryCell,NumberPickerCell,TimePickerCell,DatePickerCell,CustomCell)</Description>
 		<PackageReleaseNotes>
-			iOS Header/FooterView dynamic height support
+			.NET9 supported
         </PackageReleaseNotes>
 		<PackageTags>MAUI TableView Cell Setting Configuration Option ListView UITableView RecyclerView ReOrder DragDrop</PackageTags>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-ios|AnyCPU'">
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-ios|AnyCPU'">
 	  <EnableCodeSigning>False</EnableCodeSigning>
 	  <CreatePackage>false</CreatePackage>
 	</PropertyGroup>
@@ -39,13 +39,13 @@ There are various cells such as (LabelCell,ButtonCell,CommandCell,SwitchCell,Che
 	  <DebugType>pdbonly</DebugType>
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-ios|AnyCPU'">
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-ios|AnyCPU'">
 	  <DebugSymbols>true</DebugSymbols>
 	  <EnableCodeSigning>false</EnableCodeSigning>
 	</PropertyGroup>
 
 	<!-- Android -->
-	<ItemGroup Condition="$(TargetFramework.StartsWith('net8.0-android')) != true">
+	<ItemGroup Condition="$(TargetFramework.StartsWith('net9.0-android')) != true">
 		<Compile Remove="**\**\*.Android.cs" />
 		<None Include="**\**\*.Android.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
 		<Compile Remove="**\Android\**\*.cs" />
@@ -53,7 +53,7 @@ There are various cells such as (LabelCell,ButtonCell,CommandCell,SwitchCell,Che
 	</ItemGroup>
 
 	<!-- iOS / Mac -->
-	<ItemGroup Condition="$(TargetFramework.StartsWith('net8.0-ios')) != true AND $(TargetFramework.StartsWith('net8.0-maccatalyst')) != true">
+	<ItemGroup Condition="$(TargetFramework.StartsWith('net9.0-ios')) != true AND $(TargetFramework.StartsWith('net9.0-maccatalyst')) != true">
 		<Compile Remove="**\**\*.iOS.cs" />
 		<None Include="**\**\*.iOS.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
 		<Compile Remove="**\iOS\**\*.cs" />
@@ -61,7 +61,7 @@ There are various cells such as (LabelCell,ButtonCell,CommandCell,SwitchCell,Che
 	</ItemGroup>
 
 	<!-- NET -->
-	<ItemGroup Condition="'$(TargetFramework)' != 'net8.0'">
+	<ItemGroup Condition="'$(TargetFramework)' != 'net9.0'">
 		<Compile Remove="**\**\*.Net.cs" />
 		<None Include="**\**\*.Net.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
 	</ItemGroup>
